# audiopulse-embedded

./: .gitmodules  LICENSE  README.md
fw/: CMakeLists.txt  K20.ld  kinetis.ld.in  mk22_periph.ld  start.gdb.in  start_kdevelop.gdb.in
fw/CMSIS/DSP_Lib/Source/BasicMathFunctions/: arm_abs_f32.c  arm_abs_q15.c  arm_abs_q31.c  arm_abs_q7.c  arm_add_f32.c  arm_add_q15.c  arm_add_q31.c  arm_add_q7.c  arm_dot_prod_f32.c  arm_dot_prod_q15.c  arm_dot_prod_q31.c  arm_dot_prod_q7.c  arm_mult_f32.c  arm_mult_q15.c  arm_mult_q31.c  arm_mult_q7.c  arm_negate_f32.c  arm_negate_q15.c  arm_negate_q31.c  arm_negate_q7.c  arm_offset_f32.c  arm_offset_q15.c  arm_offset_q31.c  arm_offset_q7.c  arm_scale_f32.c  arm_scale_q15.c  arm_scale_q31.c  arm_scale_q7.c  arm_shift_q15.c  arm_shift_q31.c  arm_shift_q7.c  arm_sub_f32.c  arm_sub_q15.c  arm_sub_q31.c  arm_sub_q7.c
fw/CMSIS/DSP_Lib/Source/CommonTables/: arm_common_tables.c  arm_const_structs.c
fw/CMSIS/DSP_Lib/Source/ComplexMathFunctions/: arm_cmplx_conj_f32.c  arm_cmplx_conj_q15.c  arm_cmplx_conj_q31.c  arm_cmplx_dot_prod_f32.c  arm_cmplx_dot_prod_q15.c  arm_cmplx_dot_prod_q31.c  arm_cmplx_mag_f32.c  arm_cmplx_mag_q15.c  arm_cmplx_mag_q31.c  arm_cmplx_mag_squared_f32.c  arm_cmplx_mag_squared_q15.c  arm_cmplx_mag_squared_q31.c  arm_cmplx_mult_cmplx_f32.c  arm_cmplx_mult_cmplx_q15.c  arm_cmplx_mult_cmplx_q31.c  arm_cmplx_mult_real_f32.c  arm_cmplx_mult_real_q15.c  arm_cmplx_mult_real_q31.c
fw/CMSIS/DSP_Lib/Source/ControllerFunctions/: arm_pid_init_f32.c  arm_pid_init_q15.c  arm_pid_init_q31.c  arm_pid_reset_f32.c  arm_pid_reset_q15.c  arm_pid_reset_q31.c  arm_sin_cos_f32.c  arm_sin_cos_q31.c
fw/CMSIS/DSP_Lib/Source/FastMathFunctions/: arm_cos_f32.c  arm_cos_q15.c  arm_cos_q31.c  arm_sin_f32.c  arm_sin_q15.c  arm_sin_q31.c  arm_sqrt_q15.c  arm_sqrt_q31.c
fw/CMSIS/DSP_Lib/Source/FilteringFunctions/: arm_biquad_cascade_df1_32x64_init_q31.c  arm_biquad_cascade_df1_32x64_q31.c  arm_biquad_cascade_df1_f32.c  arm_biquad_cascade_df1_fast_q15.c  arm_biquad_cascade_df1_fast_q31.c  arm_biquad_cascade_df1_init_f32.c  arm_biquad_cascade_df1_init_q15.c  arm_biquad_cascade_df1_init_q31.c  arm_biquad_cascade_df1_q15.c  arm_biquad_cascade_df1_q31.c  arm_biquad_cascade_df2T_f32.c  arm_biquad_cascade_df2T_init_f32.c  arm_conv_f32.c  arm_conv_fast_opt_q15.c  arm_conv_fast_q15.c  arm_conv_fast_q31.c  arm_conv_opt_q15.c  arm_conv_opt_q7.c  arm_conv_partial_f32.c  arm_conv_partial_fast_opt_q15.c  arm_conv_partial_fast_q15.c  arm_conv_partial_fast_q31.c  arm_conv_partial_opt_q15.c  arm_conv_partial_opt_q7.c  arm_conv_partial_q15.c  arm_conv_partial_q31.c  arm_conv_partial_q7.c  arm_conv_q15.c  arm_conv_q31.c  arm_conv_q7.c  arm_correlate_f32.c  arm_correlate_fast_opt_q15.c  arm_correlate_fast_q15.c  arm_correlate_fast_q31.c  arm_correlate_opt_q15.c  arm_correlate_opt_q7.c  arm_correlate_q15.c  arm_correlate_q31.c  arm_correlate_q7.c  arm_fir_decimate_f32.c  (+55 more)
fw/CMSIS/DSP_Lib/Source/MatrixFunctions/: arm_mat_add_f32.c  arm_mat_add_q15.c  arm_mat_add_q31.c  arm_mat_cmplx_mult_f32.c  arm_mat_cmplx_mult_q15.c  arm_mat_cmplx_mult_q31.c  arm_mat_init_f32.c  arm_mat_init_q15.c  arm_mat_init_q31.c  arm_mat_inverse_f32.c  arm_mat_mult_f32.c  arm_mat_mult_fast_q15.c  arm_mat_mult_fast_q31.c  arm_mat_mult_q15.c  arm_mat_mult_q31.c  arm_mat_scale_f32.c  arm_mat_scale_q15.c  arm_mat_scale_q31.c  arm_mat_sub_f32.c  arm_mat_sub_q15.c  arm_mat_sub_q31.c  arm_mat_trans_f32.c  arm_mat_trans_q15.c  arm_mat_trans_q31.c
fw/CMSIS/DSP_Lib/Source/StatisticsFunctions/: arm_max_f32.c  arm_max_q15.c  arm_max_q31.c  arm_max_q7.c  arm_mean_f32.c  arm_mean_q15.c  arm_mean_q31.c  arm_mean_q7.c  arm_min_f32.c  arm_min_q15.c  arm_min_q31.c  arm_min_q7.c  arm_power_f32.c  arm_power_q15.c  arm_power_q31.c  arm_power_q7.c  arm_rms_f32.c  arm_rms_q15.c  arm_rms_q31.c  arm_std_f32.c  arm_std_q15.c  arm_std_q31.c  arm_var_f32.c  arm_var_q15.c  arm_var_q31.c
fw/CMSIS/DSP_Lib/Source/SupportFunctions/: arm_copy_f32.c  arm_copy_q15.c  arm_copy_q31.c  arm_copy_q7.c  arm_fill_f32.c  arm_fill_q15.c  arm_fill_q31.c  arm_fill_q7.c  arm_float_to_q15.c  arm_float_to_q31.c  arm_float_to_q7.c  arm_q15_to_float.c  arm_q15_to_q31.c  arm_q15_to_q7.c  arm_q31_to_float.c  arm_q31_to_q15.c  arm_q31_to_q7.c  arm_q7_to_float.c  arm_q7_to_q15.c  arm_q7_to_q31.c
fw/CMSIS/DSP_Lib/Source/TransformFunctions/: arm_bitreversal.c  arm_bitreversal2.S  arm_cfft_f32.c  arm_cfft_radix2_f32.c  arm_cfft_radix2_init_f32.c  arm_cfft_radix2_init_q15.c  arm_cfft_radix2_init_q31.c  arm_cfft_radix2_q15.c  arm_cfft_radix2_q31.c  arm_cfft_radix4_f32.c  (+20 more)
fw/CMSIS/Include/: core_cm4.h
fw/cmdebug/: gdb.py  gdb_plot.py
fw/src/: USB_Config.h  apulse_math.h  audio_data.c  audio_generator.c  controller.cpp  controller.h  filter_constants.cpp  input_dsp.cpp  input_dsp.h  main.cpp  startup.c  startup.s  usb_descriptor.c  usb_descriptor.h  user_config.h  wavegen.cpp  wavegen.h
fw/src/bsp/: clocks.cpp  clocks.h  codec.cpp  codec.h  platform.cpp  platform.h  startup.s  usb.cpp  usb.h
fw/src/driver/: clocks.cpp  clocks.h  codec.cpp  codec.h  gpio.h  mt29fxg01.cpp  mt29fxg01.h  mt29g.cpp  mt29g.h  platform.cpp  platform.h  pwm_gpio.h  spi.cpp  spi.h  timer.h  tpa6130a2.cpp  tpa6130a2.h  uart.cpp  uart.h  usb.cpp  usb.h
fw/src/freescale/: MK20D7.h  derivative.h  system_MK22F51212.c  system_MK22F51212.h  vectors.c
fw_chibios/: CMakeLists.txt  audiopulse_stm32ldiscovery.cfg  start.gdb.in  stm32f722_periph.ld
fw_chibios/src/: apulse_math.h  apulse_util.h  chconf.h  codec.cpp  codec.h  ctrl_if.cpp  ctrl_if.h  gpio.h  main.cpp  mcuconf.h  platform.cpp  platform.h  usbcfg.c  usbserial.cpp  usbserial.h
fw_rev4/: CMakeLists.txt  Makefile  STM32H753VITx_FLASH.ld  ap.ioc  toolchain.cmake
fw_rev4/Core/Inc/: FreeRTOSConfig.h  ap.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  test_ctrl.h
fw_rev4/Core/Src/: audio_ctrl.c  audio_ctrl.h  freertos.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  test_ctrl.c
fw_rev4/Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal_cryp.h
fw_rev4/USB_DEVICE/App/: usb_device.c  usbd_desc.c
(+236 files in other folders)
